[package]
name = "simple-raft-node"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
edition = "2018"

[dependencies]
failure = { version = "~0", features = ["backtrace"] }
lazy_static = "~1"
log = "~0"
regex = "~1"
raft = { git = "https://github.com/pingcap/raft-rs", branch = "master" }
serde = { version = "~1", features = ["derive"] }
protobuf = "~2.1-2.2"
crossbeam = "~0"
get_if_addrs = "~0"
rmp-serde = "~0"
runtime = "0.3.0-alpha.6"
futures-preview = "=0.3.0-alpha.17"

[dev-dependencies]
env_logger = "~0"
runtime = "0.3.0-alpha.6"
rocket = "~0"
ctrlc = { version = "~3", features = ["termination"] }
futures-preview = "0.3.0-alpha.17"
