[package]
name = "simple-raft-node"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
edition = "2018"

[dependencies]
failure = { version = "0.1.6", features = ["backtrace"] }
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.1"
raft = { git = "https://github.com/pingcap/raft-rs", branch = "master" }
serde = { version = "1.0.101", features = ["derive"] }
protobuf = "2.8.1"
crossbeam = "0.7.2"
get_if_addrs = "0.5.3"
rmp-serde = "0.14.0"
runtime = "0.3.0-alpha.7"
futures-preview = "0.3.0-alpha.19"
slog-term = "2.4.1"
slog = "2.5.2"
slog-envlogger = "2.2.0"

[dev-dependencies]
env_logger = "0.7.0"
rocket = "0.4.2"
ctrlc = { version = "3.1.3", features = ["termination"] }
